# moos-ivp-manda

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
docs/: requirements.txt
docs/doxygen/: .gitignore  Doxyfile  gen_docs.sh
docs/sphinx/: Makefile  conf.py  index.rst  p_survey_path.rst
missions/: .gitignore
missions/2015_portsmouth_M1/: .gitignore  alpha.bhv  alpha.moos  asv.bhv  launch.sh  meta_asv.moos  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos  plug_pBasicContactMgr.moos  plug_pHelmIvP.moos  plug_pHelmIvP_asv.moos  plug_pLogger.moos  plug_pMarinePID.moos  plug_pNodeReporter.moos  plug_pShare.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos  targ_boat1.moos  targ_boat2.bhv  targ_boat2.moos  targ_shoreside.moos
missions/arduino_test/: test_arduino.moos
missions/bow_lake/: BowLake.info  BowLake.tif  BowLake_Redo.info  BowLake_Zoom_Redo.info  bow_avoidcollision.bhv  bow_laptop.moos  bow_rpi2.moos
missions/chase_lab/: CCOM_Aerial_HighRes.info  CCOM_Aerial_UTM.info  HypackPositionOutput.txt  chase_beaglebone.moos  chase_line.bhv  chase_remote.moos  gp9_gpstest.moos  zboat_gpstest.moos
missions/controls_test/: .gitignore  alpha.bhv  alpha.moos  alpha_circle.bhv  alpha_consthead.bhv  consthead_pattern.bhv  control_test.moos  control_test_slowturn.moos  launch.sh  replay.moos  survey_pattern.bhv
missions/gps_test/: gps_test.moos
missions/m10_jake/: clean.sh
missions/mendums_lake/: launch_python.sh  mendums_avoidcollision.bhv  mendums_laptop.moos  mendums_rpi2.moos
missions/newport_ri/: Newport_Chart.tif  newport.bhv  newport_laptop.moos  newport_rpi2.moos
missions/newport_survey/: Newport_Chart.info  newport.bhv  newport_adaptive_rpi2.moos  newport_laptop.moos  newport_rpi2.moos  newport_sonar.bhv  sonar.bhv  test_llpost.moos  test_sonarfilter.moos
missions/ocean_disc_day/: mendums.bhv  mendums_asv.bhv  mendums_disc.moos  mendums_disc_asv.moos
missions/sonar_sim/: .gitignore  (+17 more)
scripts/: copy_binaries.sh  remove_undergrad_dup.sh
src/: CMakeLists.txt  Readme.md
src/BHV_AvoidShoal/: BHV_AvoidShoal.cpp  BHV_AvoidShoal.h
src/coremods/: CommsFiles.sublime-workspace  GenMOOSApp_AppCasting  MOOS-MOOSCore-Core-libMOOS-Comms-XPCGetProtocol.cpp  MOOS-MOOSCore-Core-libMOOS-Comms-XPCSocket.cpp  MOOS-MOOSCore-Core-libMOOS-Comms-include-MOOS-libMOOS-Comms-XPCGetProtocol.h  MarinePID.cpp  ivp-src-pHostInfo-HostInfo.cpp
src/coremods/pMarinePID/: MarinePID.cpp  MarinePID.h  PIDEngine.cpp  PIDEngine.h  ScalarPID.cpp  ScalarPID.h
src/iCV100/: CMakeLists.txt  CV100.cpp  CV100.h  iCV100.moos  iCV100Main.cpp
src/iGP9/: CMakeLists.txt  GP9.cpp  GP9.h  GP9_Info.cpp  GP9_Info.h  README.md  comms.cpp  comms.h  firmware_registers.h  iGP9.moos  iGP9.sublime-workspace  main.cpp  registers.cpp  registers.h
src/iGPS/: CMakeLists.txt  GPSInstrument.cpp  GPSInstrument.h  iGPSMain.cpp
src/iGPS_MB1/: CMakeLists.txt  GPS_MB1.cpp  GPS_MB1.h
src/iMOOSArduino/: CMakeCache.txt  CMakeLists.txt  MOOSArduino.cpp  MOOSArduino.h  MOOSArduino_Info.cpp  MOOSArduino_Info.h  Makefile  SonarMap.h  UtilMOOSArduino.cpp  UtilMOOSArduino.h  cmake_install.cmake  iMOOSArduino.moos  main.cpp
src/iSonar/: CMakeLists.txt  Sonar.cpp  Sonar.h  Sonar_Info.cpp  Sonar_Info.h  iGPSMain.cpp  iSonar.moos  main.cpp
src/iZBoat/: CMakeLists.txt  ZBoat.cpp  ZBoat.h  ZBoat_Info.cpp  ZBoat_Info.h  iZBoat.moos  main.cpp
src/lib_SimpleSerial/: CMakeLists.txt  SerialComms.cpp  SerialComms.h
src/lib_anrp_util/: CClientTCPSocket.cpp  CClientTCPSocket.h  CDatagramCtl.cpp  CDatagramCtl.h  CFDCtl.cpp  CFDCtl.h  CLocalAndBroadcastDatagram.cpp  CLocalAndBroadcastDatagram.h  CMakeLists.txt  CSerialPort.cpp  CSerialPort.h  CServerTCPSocket.cpp  CServerTCPSocket.h  CUDPSocket.cpp  CUDPSocket.h  CnClientTCPSocket.cpp  CnClientTCPSocket.h  CnDatagramCtl.cpp  CnDatagramCtl.h  CnFDCtl.cpp  CnFDCtl.h  CnSerialPort.cpp  CnSerialPort.h  CnServerTCPSocket.cpp  CnServerTCPSocket.h  CnUDPSocket.cpp  CnUDPSocket.h  CommServer.cpp  CommServer.h  DifferentialDriveIntegrator.cpp  DifferentialDriveIntegrator.h  DoubleLinearInterp.h  Heading.h  LLPosition.h  LUInterpBuffer.h  NMEAMessage.cpp  NMEAMessage.h  NSSPID.h  Position.h  Position_test.cpp  (+37 more)
src/pLLTrackUpdate/: CMakeLists.txt  LLTrackUpdate.cpp  LLTrackUpdate.h  LLTrackUpdate_Info.cpp  LLTrackUpdate_Info.h  main.cpp  pLLTrackUpdate.moos
src/pMOOSArduinoTester/: CMakeLists.txt  MOOSArduinoTester.cpp  MOOSArduinoTester.h  MOOSArduinoTester_Info.cpp  MOOSArduinoTester_Info.h  main.cpp  pMOOSArduinoTester.moos
src/pMarineMRAS/: CMakeLists.txt  CourseChangeMRAS.cpp  CourseChangeMRAS.h  CourseKeepMRAS.cpp  CourseKeepMRAS.h  CurrentEstimate.cpp  CurrentEstimate.h  CurrentRecord.cpp  CurrentRecord.h  MarineMRAS.cpp  MarineMRAS.h  MarineMRAS_Info.cpp  MarineMRAS_Info.h  SignalFilter.cpp  SignalFilter.h  SpeedControl.cpp  SpeedControl.h  ThrustMap.cpp  ThrustMap.h  main.cpp  pMarineMRAS.moos
src/pSonarFilter/: CMakeLists.txt  SonarFilter.cpp  SonarFilter.h  SonarFilter_Info.cpp  SonarFilter_Info.h  StDevFilter.cpp  StDevFilter.h  main.cpp  pSonarFilter.moos
src/pSurveyPath/: CMakeLists.txt  PathPlan.cpp  PathPlan.h  RecordSwath.cpp  RecordSwath.h  SurveyPath.cpp  SurveyPath.h  SurveyPath_Info.cpp  SurveyPath_Info.h  main.cpp  pSurveyPath.moos
src/pSurveyPath/tests/: CMakeLists.txt  TestPathPlan.cpp  TestRecordSwath.cpp  gnuplot-iostream.h  noborder.cfg
src/uMOOSArduinoLib/: ArduinoComm.cpp  ArduinoComm.h  CMakeLists.txt  CommType.cpp  CommType.h  FIFOComm.cpp  FIFOComm.h  IMOOSComm.cpp  IMOOSComm.h  MOOSVars.h  NetClientComm.cpp  NetClientComm.h  NetComm.cpp  NetComm.h  NetServerComm.cpp  NetServerComm.h  README.md
src/uMOOSArduinoLib/NetUtil/: CMakeLists.txt  no_sigpipe.cpp  no_sigpipe.h  server.h  server2tcp.cpp  tcpblockio.cpp  tcpblockio.h
src/uRecordSwath/: CMakeLists.txt  RecordSwath.cpp  RecordSwath.h  RecordSwath_Info.cpp  RecordSwath_Info.h  main.cpp  uRecordSwath.moos
src/uSimNomoto/: CMakeLists.txt  SimEngine.cpp  SimEngine.h  USM_MOOSApp.cpp  USM_Model.cpp  USM_Model.h
(+201 files in other folders)
